--- a/app/src/main/res/layout/activity_add_new_note.xml
+++ b/app/src/main/res/layout/activity_add_new_note.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titleTextView">
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/buColorBlue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -53,7 +53,7 @@
             android:checked="true" />
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/buColorYellow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -62,7 +62,7 @@
             android:checked="false" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/buColorRed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titleTextView">
 
         <RadioButton
-            android:id="@+id/radioButton6"
+            android:id="@+id/buCardViewNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -94,7 +94,7 @@
             android:checked="true" />
 
         <RadioButton
-            android:id="@+id/radioButton5"
+            android:id="@+id/buCardViewCheckNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -103,7 +103,7 @@
             android:checked="false" />
 
         <RadioButton
-            android:id="@+id/radioButton4"
+            android:id="@+id/buCardViewPhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
