--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_add"
         android:layout_alignParentBottom="true"
+        android:onClick="clickAddNoteActivity"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"/>
 </RelativeLayout>
