upload app new note private

--- a/app/src/main/res/layout/activity_add_new_note.xml
+++ b/app/src/main/res/layout/activity_add_new_note.xml
@@ -120,9 +120,9 @@
         android:layout_height="0dp"
         android:layout_below="@+id/titleTextView"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/blue"
         android:padding="8dp"
-        android:visibility="visible"
+        android:visibility="gone"
+        app:cardBackgroundColor="@color/blue"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -167,9 +167,9 @@
         android:layout_height="0dp"
         android:layout_below="@+id/titleTextView"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/blue"
         android:padding="8dp"
-        android:visibility="gone"
+        android:visibility="visible"
+        app:cardBackgroundColor="@color/blue"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -202,9 +202,9 @@
         android:layout_height="0dp"
         android:layout_below="@+id/titleTextView"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/yellow"
         android:padding="8dp"
         android:visibility="gone"
+        app:cardBackgroundColor="@color/blue"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
