--- a/app/src/main/res/layout/item_note_photo.xml
+++ b/app/src/main/res/layout/item_note_photo.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardViewPhotoNote"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/red"
     app:cardCornerRadius="4dp"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true"
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/add_note_text"
-            android:textColor="#FFFFFF"
+            android:textColor="#3D3B3B"
             android:textSize="18sp" />
     </LinearLayout>
 
