--- a/app/src/main/res/layout/activity_add_new_note.xml
+++ b/app/src/main/res/layout/activity_add_new_note.xml
@@ -139,6 +139,7 @@
                 android:layout_height="150dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
                 android:onClick="openGallery"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_photo" />
