--- a/app/src/main/res/layout/activity_note_photo_details.xml
+++ b/app/src/main/res/layout/activity_note_photo_details.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/relative_view_photos"
     android:background="@color/blue">
 
     <ImageView
@@ -28,15 +29,6 @@
         android:padding="16dp"
         android:textColor="@android:color/black"
         android:textColorLink="#989CA0" />
-
-    <Button
-        android:id="@+id/button_update"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/photoNoteEditText"
-        android:layout_margin="5dp"
-        android:text="تحديث"
-        android:textSize="18sp" />
 
 
 </RelativeLayout>
