--- a/app/src/main/res/layout/activity_note_photo_details.xml
+++ b/app/src/main/res/layout/activity_note_photo_details.xml
@@ -12,6 +12,8 @@
         android:layout_height="200dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:onClick="openGallery"
+        android:layout_marginTop="16dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_photo" />
 
