--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="red">#dc544b</color>
     <color name="blue">#e1f5fd</color>
     <color name="yellow">#fec130</color>
+    <color name="green">#4CAF50</color>
 
 </resources>
