--- a/app/src/main/res/layout/activity_note_check_details.xml
+++ b/app/src/main/res/layout/activity_note_check_details.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/cardViewNoteCheck"
-    app:cardElevation="4dp"
-    app:cardUseCompatPadding="true"
-    app:cardCornerRadius="4dp"
+    android:background="@color/blue"
+
     >
 
     <RelativeLayout
@@ -41,4 +40,4 @@
 
     </RelativeLayout>
 
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
