--- a/app/src/main/res/layout/activity_note_check_details.xml
+++ b/app/src/main/res/layout/activity_note_check_details.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/cardViewNoteCheck"
-    android:background="@color/blue"
-
+    app:cardBackgroundColor="@color/blue"
     >
 
     <RelativeLayout
@@ -40,4 +39,4 @@
 
     </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
