--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_note_text"
-        android:textColor="#3D3B3B"
+        android:textColorHint="#989CA0"
         android:textSize="18sp" />
 
 </androidx.cardview.widget.CardView>
