--- a/app/src/main/res/layout/item_note_check.xml
+++ b/app/src/main/res/layout/item_note_check.xml
@@ -22,7 +22,7 @@
             android:layout_alignParentRight="true"
             android:text="@string/add_note_text"
             android:textAlignment="textStart"
-            android:textColor="#3D3B3B"
+            android:textColorHint="#989CA0"
             android:textSize="18sp" />
 
         <CheckBox
