--- a/app/src/main/res/layout/item_note_photo.xml
+++ b/app/src/main/res/layout/item_note_photo.xml
@@ -18,6 +18,7 @@
         android:layout_height="200dp"
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
+        app:cardBackgroundColor="@{notes.color}"
         app:cardUseCompatPadding="true"
         app:contentPadding="16dp">
 
