--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardViewNotes"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="4dp"
-    app:cardUseCompatPadding="true"
-    app:contentPadding="16dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <TextView
-        android:id="@+id/tv_note_simple"
+    <data>
+
+        <import type="com.barmej.notesapp.data.model.Notes"/>
+
+        <variable
+            name="notes"
+            type="Notes" />
+    </data>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewNotes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add_note_text"
-        android:textColorHint="#989CA0"
-        android:textSize="18sp" />
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp"
+        app:cardBackgroundColor="@{notes.color}"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="16dp">
 
-</androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/tv_note_simple"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{notes.title}"
+            android:textColorHint="#989CA0"
+            android:textSize="18sp" />
+
+    </androidx.cardview.widget.CardView>
+</layout>
