--- a/app/src/main/res/layout/item_note_check.xml
+++ b/app/src/main/res/layout/item_note_check.xml
@@ -19,7 +19,8 @@
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true"
-        app:cardBackgroundColor="@{check_note.color}"
+        app:cardBackgroundColor="@{check_note.checked ? @color/green : check_note.color}"
+
         app:contentPadding="16dp">
 
         <RelativeLayout
@@ -31,10 +32,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="@{check_note.title}"
+                android:text="@{check_note.description}"
                 android:textAlignment="textStart"
                 android:textColorHint="#989CA0"
-
                 android:textSize="18sp" />
 
             <CheckBox
@@ -42,8 +42,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:checked="@{check_note.checked ?  true : false }"
+              />
 
-                />
+
+
 
         </RelativeLayout>
 
